rename files- refactor notes.

--- a/multi-threading-notes/1.core-concepts/1.multithreading-comprehensive-notes.md
+++ b/multi-threading-notes/1.core-concepts/1.multithreading-comprehensive-notes.md
@@ -934,6 +934,8 @@ ConsumerThread consuming item 4
 
 The `interrupt()` method in Java is used to interrupt a thread that is in a waiting, sleeping, or blocked state. It's a way to signal to a thread that it should stop what it's doing and potentially terminate.
 
+- If any thread is in sleeping or waiting state (i.e. sleep() or wait() is invoked), calling the  interrupt() method on the thread, breaks out the sleeping or waiting state throwing  InterruptedException. 
+- If the thread is not in the sleeping or waiting state, calling the  interrupt() method performs normal behaviour and doesn't interrupt the thread but  sets the interrupt flag to true.
 ### Key features:
 
 * **Purpose**: Sends an interrupt signal to a thread or can say Called on a Thread object to interrupt that specific thread
@@ -964,9 +966,11 @@ public class InterruptExample {
             e.printStackTrace();
         }
 
+        System.out.println("workerThread.isInterrupted()  ---> "+workerThread.isInterrupted());
         // Interrupt the worker thread
         System.out.println("Main thread is interrupting the worker thread");
         workerThread.interrupt();
+        System.out.println("workerThread.isInterrupted()  --->  "+workerThread.isInterrupted());
     }
 }
 
@@ -994,7 +998,10 @@ class Worker implements Runnable {
 WorkerThread is starting to work
 WorkerThread is working...
 WorkerThread is working...
+WorkerThread is working...
+workerThread.isInterrupted()  ---> false
 Main thread is interrupting the worker thread
+workerThread.isInterrupted()  --->  true
 WorkerThread was interrupted
 ```
 
